--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -1,15 +1,15 @@
 {
-  "name": "lnd.public.dappnode.eth",
-  "version": "0.0.1",
-  "description": "The Lightning Network Daemon (development package)",
+  "name": "ln.dnp.dappnode.eth",
+  "version": "0.1.0",
+  "description": "The Lightning Network DAppNodePackage (lnd + lncli-web)",
   "avatar": "/ipfs/QmVrjV1ANxjYVqRJzycYKcCUAH8nU337UsMVir1CnZYNa8",
   "type": "service",
   "image": {
-    "path": "lnd.public.dappnode.eth_0.0.1.tar.xz",
-    "hash": "/ipfs/QmaUn2Ag1utYinuR7zf7UFdoqccq6drd3X7t8u2LDHfYZS",
-    "size": "207219904",
+    "path": "ln.dnp.dappnode.eth_0.1.0.tar.xz",
+    "hash": "/ipfs/QmZnp9AHJgXr1P6jZW5fBjDTSH4ZncXdmEHRsxUL7KH8wj",
+    "size": 52098182,
     "ports": [
-      "9735:9735"      
+      "9735:9735"
     ],
     "volumes": [
       "lndconfig_data:/root/.lnd/"
@@ -17,14 +17,18 @@
     "environment": [
       "RPCUSER=dappnode",
       "RPCPASS=dappnode",
-      "BITCOIND_HOST=my.bitcoind.dnp.dappnode.eth",
+      "BITCOIND_HOST=my.bitcoin.dnp.dappnode.eth",
       "NETWORK=mainnet",
       "SET_SERVERHOST=0.0.0.0",
       "ALIAS=",
       "EXT_IP="
     ]
   },
-  "author": "Abel Boldú (vdo)",
+  "author": "DAppNode Association <admin@dappnode.io> (https://github.com/dappnode)",
+  "contributors": [
+    "Abel Boldú (@vdo)",
+    "Eduardo Antuña <eduadiez@gmail.com> (https://github.com/eduadiez)"
+  ],
   "keywords": [
     "bitcoin",
     "btc",
@@ -32,17 +36,17 @@
     "lnd"
   ],
   "homepage": {
-    "homepage": "https://lightning.network"
+    "homepage": "https://github.com/dappnode/DAppNodePackage-LightningNetwork#readme"
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "git+https://github.com/dappnode/DAppNodePackage-LightningNetwork.git"
   },
   "bugs": {
-    "url": ""
+    "url": "https://github.com/dappnode/DAppNodePackage-LightningNetwork/issues"
   },
   "license": "GPL-3.0",
   "dependencies": {
-   "bitcoind.dnp.dappnode.eth": "/ipfs/QmdoQffVPV9y7N1uW6eBiPHZ9S4MvpyS2ucUZtzb8bKAb4"
+    "bitcoin.dnp.dappnode.eth": "latest"
   }
 }
