--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,20 @@
 version: '3.4'
 services:
-    lnd.public.dappnode.eth:
+    lnd.dnp.dappnode.eth:
+        image: 'ln.dnp.dappnode.eth:0.1.0'
         build: ./build
-        image: lnd.public.dappnode.eth:0.0.1
+        volumes:
+            - 'lndconfig_data:/root/.lnd/'
+        ports:
+            - '9735:9735'
+        environment:
+            - RPCUSER=dappnode
+            - RPCPASS=dappnode
+            - BITCOIND_HOST=my.bitcoin.dnp.dappnode.eth
+            - NETWORK=mainnet
+            - SET_SERVERHOST=0.0.0.0
+            - ALIAS=
+            - EXT_IP=
+
+volumes:
+    lndconfig_data: {}
