--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,8 @@ jobs:
       script:
         - npm install -g @dappnode/dappnodesdk
         - docker-compose build
-        - dappnodesdk publish patch -p infura -a $DEV
+        - TYPE=${PUBLISH:-patch}
+        - dappnodesdk publish ${TYPE} -p infura -a $DEV
       node_js: lts/*
       before_deploy:
         - wget https://raw.githubusercontent.com/dappnode/DAppNode/master/scripts/before_deploy.sh
