Added WEB_USER and WEB_PASSWORD

--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -1,13 +1,13 @@
 {
-  "name": "ln.dnp.dappnode.eth",
-  "version": "0.1.1",
-  "description": "The Lightning Network DAppNodePackage (lnd + lncli-web).The Lightning Network is a decentralized system for instant, high-volume micropayments that removes the risk of delegating custody of funds to trusted third parties.",
+  "name": "lightning-network.dnp.dappnode.eth",
+  "version": "0.1.0",
+  "description": "The Lightning Network DAppNodePackage (lnd + lncli-web). The Lightning Network is a decentralized system for instant, high-volume micropayments that removes the risk of delegating custody of funds to trusted third parties.",
   "avatar": "/ipfs/QmVrjV1ANxjYVqRJzycYKcCUAH8nU337UsMVir1CnZYNa8",
   "type": "service",
   "image": {
-    "path": "ln.dnp.dappnode.eth_0.1.0.tar.xz",
-    "hash": "/ipfs/QmZnp9AHJgXr1P6jZW5fBjDTSH4ZncXdmEHRsxUL7KH8wj",
-    "size": 52098182,
+    "path": "",
+    "hash": "",
+    "size": "",
     "ports": [
       "9735:9735"
     ],
@@ -17,6 +17,8 @@
     "environment": [
       "RPCUSER=dappnode",
       "RPCPASS=dappnode",
+      "WEB_USER=LND_ADMIN",
+      "WEB_PASSWORD=_CHANGEME_",
       "BITCOIND_HOST=my.bitcoin.dnp.dappnode.eth",
       "NETWORK=mainnet",
       "SET_SERVERHOST=0.0.0.0",
