Ride The Lightning

--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -1,7 +1,7 @@
 {
   "name": "lightning-network.dnp.dappnode.eth",
   "version": "0.1.0",
-  "description": "The Lightning Network DAppNodePackage (lnd + lncli-web). The Lightning Network is a decentralized system for instant, high-volume micropayments that removes the risk of delegating custody of funds to trusted third parties.",
+  "description": "The Lightning Network DAppNodePackage (lnd + RTL). The Lightning Network is a decentralized system for instant, high-volume micropayments that removes the risk of delegating custody of funds to trusted third parties.",
   "avatar": "/ipfs/QmVrjV1ANxjYVqRJzycYKcCUAH8nU337UsMVir1CnZYNa8",
   "type": "service",
   "image": {
@@ -17,8 +17,6 @@
     "environment": [
       "RPCUSER=dappnode",
       "RPCPASS=dappnode",
-      "WEB_USER=LND_ADMIN",
-      "WEB_PASSWORD=_CHANGEME_",
       "BITCOIND_HOST=my.bitcoin.dnp.dappnode.eth",
       "NETWORK=mainnet",
       "SET_SERVERHOST=0.0.0.0",
