--- a/.travis.yml
+++ b/.travis.yml
@@ -1,55 +1,22 @@
 language: node_js
-dist: trusty
+dist: xenial
 sudo: required
 
-stages:
-  - name: build-test
-    if: tag != "release"
-  - name: release
-    if: tag = "release"
+# ########################
+# How to trigger a release
+#
+# Push a tag to origin:
+# - "release" (= patch)
+# - "release/patch"
+# - "release/minor"
+# - "release/major"
+# ########################
 
 jobs:
   include:
-    # Test that it builds correctly
-    ###############################
-    - stage: build-test
-      name: build-test
-      services:
-        - docker
-      script:
-        - docker-compose build
-
-    # Deploy stage
-    # - code below is common between DAppNode packages
-    ##################################################
-    - stage: release
-      name: release
-      services:
-        - docker
-      script:
-        - npm install -g @dappnode/dappnodesdk
-        - docker-compose build
-        - TYPE=${PUBLISH:-patch}
-        - dappnodesdk publish ${TYPE} -p infura -a $DEV
+    - script: docker-compose build
+      if: tag !~ ^release
+    - stage: deploy
       node_js: lts/*
-      before_deploy:
-        - wget https://raw.githubusercontent.com/dappnode/DAppNode/master/scripts/before_deploy.sh
-        - source before_deploy.sh
-      deploy:
-        provider: releases
-        prerelease: true
-        api_key: "$GITHUB_TOKEN"
-        file_glob: true
-        # $RELEASE_VERSION is exported on before_deploy.sh
-        file: build_${RELEASE_VERSION}/*
-        skip_cleanup: true
-        # $TRAVIS_TAG is exported on before_deploy.sh
-        name: "$TRAVIS_TAG"
-        body: "# Changelog"
-        on:
-          branch: master
-          tags: true
-          condition: "$TRAVIS_TAG =~ ^release*$"
-      after_deploy:
-        - wget https://raw.githubusercontent.com/dappnode/DAppNode/master/scripts/after_deploy.sh
-        - source after_deploy.sh
+      if: tag =~ ^release
+      script: npx @dappnode/dappnodesdk publish --dappnode_team_preset
