--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -5,15 +5,11 @@
   "avatar": "/ipfs/QmVrjV1ANxjYVqRJzycYKcCUAH8nU337UsMVir1CnZYNa8",
   "type": "service",
   "image": {
-    "path": "",
-    "hash": "",
-    "size": "",
-    "ports": [
-      "9735:9735"
-    ],
-    "volumes": [
-      "lndconfig_data:/root/.lnd/"
-    ],
+    "path": "lightning-network.dnp.dappnode.eth_0.0.1.tar.xz",
+    "hash": "/ipfs/QmPr1enmq7RUz6xEw7FiWwjo2b6r4t7aEMLPn3ezjQ2DYA",
+    "size": "65707744",
+    "ports": ["9735:9735"],
+    "volumes": ["lndconfig_data:/root/.lnd/"],
     "environment": [
       "RTL_PASSWORD=changeme",
       "RPCUSER=dappnode",
@@ -30,12 +26,7 @@
     "Abel Boldú (@vdo)",
     "Eduardo Antuña <eduadiez@gmail.com> (https://github.com/eduadiez)"
   ],
-  "keywords": [
-    "bitcoin",
-    "btc",
-    "lightning network",
-    "lnd"
-  ],
+  "keywords": ["bitcoin", "btc", "lightning network", "lnd"],
   "homepage": {
     "homepage": "https://github.com/dappnode/DAppNodePackage-LightningNetwork#readme"
   },
@@ -45,6 +36,9 @@
   },
   "bugs": {
     "url": "https://github.com/dappnode/DAppNodePackage-LightningNetwork/issues"
+  },
+  "disclaimer": {
+    "message": "This software is experimental, presented 'as is' and inherently carries risks. By installing it, you acknowledge that DAppNode Association has done its best to mitigate these risks and accept to waive any liability or responsibility for DAppNode in case of any shortage, discrepancy, damage, loss or destruction of any digital asset managed within this DAppNode package.\n\nThis package stores private keys, which will be stored in your DAppNode. Neither DAppNode Association nor the developers of this software can have access to your private key, nor help you recover it if you lose it. \n\nYou are solely responsible for keeping your private keys and password safe and to perform secure backups, as well as to restrict access to your computer and other equipment. To the extent permitted by applicable law, you agree to be responsible for all activities that have been conducted from your account. You must take all necessary steps to ensure that your private key, password, and/or recovery phrase remain confidential and secured."
   },
   "license": "GPL-3.0",
   "dependencies": {
