--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -1,7 +1,7 @@
 {
   "name": "lightning-network.dnp.dappnode.eth",
   "version": "0.0.3",
-  "upstreamVersion": "0.6.1-beta",
+  "upstreamVersion": "v0.7.0-beta",
   "shortDescription": "Scalable, instant Bitcoin/Blockchain transactions",
   "description": "The Lightning Network DAppNodePackage (lnd + RTL). The Lightning Network is a decentralized system for instant, high-volume micropayments that removes the risk of delegating custody of funds to trusted third parties.",
   "avatar": "/ipfs/QmYjbpLBEbPDoiJwTcWjhuHuL1Ax2HuArhXRF4Fi95HT6c",
@@ -55,8 +55,8 @@
   ],
   "links": {
     "homepage": "https://github.com/dappnode/DAppNodePackage-LightningNetwork#readme",
-    "ui": "http://lightning-network.dappnode",
-    "api": "http://lightning-network.dappnode:8080"
+    "WebUI": "http://lightning-network.dappnode",
+    "API": "http://lightning-network.dappnode:8080"
   },
   "repository": {
     "type": "git",
