--- a/dappnode_package.json
+++ b/dappnode_package.json
@@ -2,8 +2,8 @@
   "name": "lightning-network.dnp.dappnode.eth",
   "version": "0.0.3",
   "upstreamVersion": "0.6.1-beta",
-  "shortDescription": "Scalable, instant Bitcoin/Blockchain transactions",
-  "description": "The Lightning Network DAppNodePackage (lnd + RTL). The Lightning Network is a decentralized system for instant, high-volume micropayments that removes the risk of delegating custody of funds to trusted third parties.",
+  "shortDescription": "Scalable, instant Bitcoin transactions",
+  "description": "The Lightning Network DAppNodePackage (lnd + RTL). The Lightning Network is a decentralized system for instant, high-volume micropayments that remove the risk of delegating custody of funds to trusted third parties. \n\n\n **Getting started** \n\n Go to the [Lightning Network DAppNode Package readme](https://github.com/dappnode/DAppNodePackage-LightningNetwork#readme) to learn how to get started and safely backup your data.",
   "avatar": "/ipfs/QmYjbpLBEbPDoiJwTcWjhuHuL1Ax2HuArhXRF4Fi95HT6c",
   "type": "service",
   "image": {
