--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,32 @@
 version: '3.4'
 services:
-  lightning-network.dnp.dappnode.eth:
-    image: 'lightning-network.dnp.dappnode.eth:0.1.2'
-    build: ./build
-    volumes:
-      - 'lndconfig_data:/root/.lnd/'
-      - 'lndconfig_backup:/rtl/backup/'
+  lnd:
+    build:
+      context: buildLnd
+      args:
+        UPSTREAM_VERSION: v0.12.0-beta
+    image: 'lnd.lightning-network.public.dappnode.eth:0.1.0'
     ports:
       - '9735:9735'
     environment:
-      - RTL_PASSWORD=changeme
-      - RPCUSER=dappnode
-      - RPCPASS=dappnode
-      - BITCOIND_HOST=bitcoin.dappnode
-      - NETWORK=mainnet
-      - ALIAS=
-      - 'COLOR=#5ACDC5'
-      - EXT_IP=
+      ALIAS: null
+      MAINNET: null
+      COLOR: '#5ACDC5'
+    volumes:
+      - 'lnd_data:/root/.lnd/data'
+      - 'lnd_shared:/shared'
+    restart: always
+  rtl:
+    build:
+      context: buildRtl
+      args:
+        UPSTREAM_VERSION: 0.10.0
+    environment:
+      UI_PASSWORD: null
+    image: 'rtl.lightning-network.public.dappnode.eth:0.1.0'
+    volumes:
+      - 'lnd_shared:/shared'
     restart: always
 volumes:
-  lndconfig_data: {}
-  lndconfig_backup: {}
+  lnd_data: {}
+  lnd_shared: {}
