--- a/buildRtl/Dockerfile
+++ b/buildRtl/Dockerfile
@@ -5,7 +5,7 @@ FROM  shahanafarooqui/rtl:$UPSTREAM_VERSION
 #COPY ./RTL-Config.json /RTL
 ###
 
-### OVERRIDING ENTRYPOINT
+### OVERRIDE ENTRYPOINT
 COPY ./entrypoint.sh /RTL
 RUN chmod +x entrypoint.sh
 ENTRYPOINT ["/sbin/tini", "-g", "--", "/RTL/entrypoint.sh"]
