--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,20 @@
-version: '3.4'
+version: "3.4"
 services:
   lnd:
     build:
       context: buildLnd
       args:
         UPSTREAM_VERSION: v0.12.0-beta
-    image: 'lnd.lightning-network.public.dappnode.eth:0.1.0'
+    image: "lnd.lightning-network.dnp.dappnode.eth:0.1.3"
     ports:
-      - '9735:9735'
+      - "9735:9735"
     environment:
       ALIAS: null
       MAINNET: null
-      COLOR: '#5ACDC5'
+      COLOR: "#5ACDC5"
     volumes:
-      - 'lnd_data:/root/.lnd/data'
-      - 'lnd_shared:/shared'
+      - "lnd_data:/root/.lnd/data"
+      - "lnd_shared:/shared"
     restart: always
   rtl:
     build:
@@ -23,9 +23,9 @@ services:
         UPSTREAM_VERSION: 0.10.0
     environment:
       UI_PASSWORD: null
-    image: 'rtl.lightning-network.public.dappnode.eth:0.1.0'
+    image: "rtl.lightning-network.dnp.dappnode.eth:0.1.3"
     volumes:
-      - 'lnd_shared:/shared'
+      - "lnd_shared:/shared"
     restart: always
 volumes:
   lnd_data: {}
