--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
-version: '3.4'
+version: "3.4"
 services:
   lightning-network.dnp.dappnode.eth:
-    image: 'lightning-network.dnp.dappnode.eth:0.1.2'
+    image: "lightning-network.dnp.dappnode.eth:0.3.0"
     build: ./build
     volumes:
-      - 'lndconfig_data:/root/.lnd/'
-      - 'lndconfig_backup:/rtl/backup/'
+      - "lndconfig_data:/root/.lnd/"
+      - "lndconfig_backup:/rtl/backup/"
     ports:
-      - '9735:9735'
+      - "9735:9735"
     environment:
       - RTL_PASSWORD=changeme
       - RPCUSER=dappnode
@@ -15,7 +15,7 @@ services:
       - BITCOIND_HOST=bitcoin.dappnode
       - NETWORK=mainnet
       - ALIAS=
-      - 'COLOR=#5ACDC5'
+      - COLOR=#5ACDC5
       - EXT_IP=
     restart: always
 volumes:
